# bail

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  option.rs  result.rs
